--- a/sc-f-gateway-filter/src/main/resources/application.yml
+++ b/sc-f-gateway-filter/src/main/resources/application.yml
@@ -2,17 +2,57 @@ server:
   port: 8081
 spring:
   profiles:
-    active: after_route
+    active: add_request_header_route
 
 ---
 spring:
   cloud:
     gateway:
       routes:
-      - id: after_route
+      - id: add_request_header_route
         uri: http://httpbin.org:80/get
+        filters:
+        - AddRequestHeader=X-Request-Foo, Bar
         predicates:
         - After=2017-01-20T17:42:47.789-07:00[America/Denver]
-  profiles: after_route
+  profiles: add_request_header_route
+
+---
+spring:
+  cloud:
+    gateway:
+      routes:
+      - id: add_response_header_route
+        uri: http://httpbin.org:80/get
+        filters:
+        - AddResponseHeader=X-Response-Foo, Bar
+        predicates:
+        - After=2017-01-20T17:42:47.789-07:00[America/Denver]
+  profiles: add_response_header_route
 
 
+---
+spring:
+  cloud:
+    gateway:
+      routes:
+      - id: rewritepath_route
+        uri: https://blog.csdn.net
+        predicates:
+        - Path=/foo/**
+        filters:
+        - RewritePath=/foo/(?<segment>.*), /$\{segment}
+  profiles: rewritepath_route
+
+---
+spring:
+  cloud:
+    gateway:
+      routes:
+      - id: elapse_route
+        uri: http://httpbin.org:80/get
+        filters:
+        - Elapsed=false
+        predicates:
+        - After=2017-01-20T17:42:47.789-07:00[America/Denver]
+  profiles: elapse_route
